# OgreBaseScene

./: CMakeLists.txt  README.md  main.cpp  plugins_d.cfg  resources.cfg
include/: .SimpleFrameListener.h.swp  SimpleFrameListener.h
media/: Grey.material  Red.material
src/: .SimpleFrameListener.cpp.swp  SimpleFrameListener.cpp
